--- a/core/build.gradle
+++ b/core/build.gradle
@@ -4,16 +4,11 @@ configurations {
     unitTestCompile.extendsFrom runtime
     unitTestRuntime.extendsFrom unitTestCompile
 }
-def localMavenRepo = 'file://' + new File(System.getProperty('user.home'), '.m2/repository').absolutePath
-
 repositories {
-    //maven { url localMavenRepo }
     mavenLocal()
 }
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    //compile 'org.bitcoinj:groestlcoinj-core:0.12.2@jar'
-    //    compile 'com.google:bitcoinj:0.11.2'
+    compile 'org.bitcoinj:groestlcoinj-core:0.15-SNAPSHOT-COINOMI-7'
     compile 'com.google.guava:guava:20.0'
     compile 'com.google.code.findbugs:jsr305:1.3.9'
     compile 'com.madgag.spongycastle:core:1.51.0.0'
