--- a/wallet/build.gradle
+++ b/wallet/build.gradle
@@ -8,16 +8,15 @@ android {
         exclude 'META-INF/NOTICE'
     }
 
-    compileSdkVersion 21
-    buildToolsVersion '25.0.0'
+    compileSdkVersion 28
 
     defaultConfig {
         applicationId "hashengineering.groestlcoin.wallet.electrum"
         minSdkVersion 10
-        targetSdkVersion 21
+        targetSdkVersion 28
         multiDexEnabled true
-        versionCode 60
-        versionName "v1.5.29"
+        versionCode 62
+        versionName "v1.6"
     }
     dexOptions {
         preDexLibraries = false
@@ -31,6 +30,20 @@ android {
     }
     lintOptions {
         abortOnError false
+    }
+
+    splits {
+        abi {
+            enable true
+            reset()
+            include 'x86', 'armeabi-v7a'
+            universalApk true
+        }
+    }
+    packagingOptions {
+        exclude 'lib/x86_64/darwin/libscrypt.dylib'
+        exclude 'lib/x86_64/freebsd/libscrypt.so'
+        exclude 'lib/x86_64/linux/libscrypt.so'
     }
 
     sourceSets {
@@ -49,6 +62,8 @@ repositories {
     flatDir {
         dirs 'aars'
     }
+    mavenLocal()
+
 }
 
 //sourceSets {
@@ -60,22 +75,23 @@ repositories {
 
 dependencies {
     //compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile fileTree(dir: '../core/libs', include: ['*.jar'])
+    //compile fileTree(dir: '../core/libs', include: ['*.jar'])
     // Testing
 //    androidTestCompile 'junit:junit:4.11'
 //    androidTestCompile 'org.robolectric:robolectric:2.3'
 //    androidTestCompile 'com.squareup:fest-android:1.0.+'
-    compile project(':core')
-    compile 'com.android.support:gridlayout-v7:21.0.3'
-    compile 'com.android.support:support-v4:21.0.3'
-    compile 'com.android.support:appcompat-v7:21.0.3'
-    compile 'com.google.guava:guava:20.0'
-    compile 'com.google.code.findbugs:jsr305:1.3.9'
-    compile 'com.madgag.spongycastle:core:1.51.0.0'
-    compile 'com.google.protobuf:protobuf-java:2.5.0'
-    compile 'com.google.zxing:core:3.1.0'
-    compile 'ch.acra:acra:4.5.0'
-    compile 'com.android.support:support-v4-preferencefragment:1.0.0@aar'
+    implementation 'org.bitcoinj:groestlcoinj-core:0.15-SNAPSHOT-COINOMI-7'
+    implementation project(':core')
+    implementation 'com.android.support:gridlayout-v7:21.0.3'
+    implementation 'com.android.support:support-v4:21.0.3'
+    implementation 'com.android.support:appcompat-v7:21.0.3'
+    implementation 'com.google.guava:guava:20.0'
+    implementation 'com.google.code.findbugs:jsr305:1.3.9'
+    implementation 'com.madgag.spongycastle:core:1.51.0.0'
+    implementation 'com.google.protobuf:protobuf-java:2.5.0'
+    implementation 'com.google.zxing:core:3.1.0'
+    implementation 'ch.acra:acra:4.5.0'
+    implementation 'com.android.support:support-v4-preferencefragment:1.0.0@aar'
    // compile 'org.bitcoinj:groestlcoinj-core:0.15-SNAPSHOT-COINOMI-7'
 //    compile 'com.github.castorflex.smoothprogressbar:library:1.1.0'
 }
